fixed login form

--- a/src/output.css
+++ b/src/output.css
@@ -664,3 +664,20 @@ video {
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+
+
+html, body {
+  height: 100%;
+  margin: 0
+}
+
+#app {
+  height: 100%;
+  margin: 0
+}
+
+.h-fill {
+  height: 100%;
+}
+
+
